---------------------------------------------------------------------------
Version 3.12.0 (rgerhards), 2008-02-28
---------------------------------------------------------------------------
Version 3.11.6 (rgerhards), 2008-02-27
- bugfix: gssapi libraries were still linked to rsyslog core, what should
  no longer be necessary. Applied fix by Michael Biebl to solve this.
- enabled imgssapi to be loaded side-by-side with imtcp
- added InputGSSServerPermitPlainTCP config directive
- split imgssapi source code somewhat from imtcp
- bugfix: queue cancel cleanup handler could be called with
  invalid pointer if dequeue failed
- bugfix: rsyslogd segfaulted on second SIGHUP
  tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=38
- improved stability of queue engine
- bugfix: queue disk file were not properly persisted when 
  immediately after closing an output file rsyslog was stopped
  or huped (the new output file open must NOT have happend at
  that point) - this lead to a sparse and invalid queue file
  which could cause several problems to the engine (unpredictable
  results). This situation should have happened only in very
  rare cases. tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=40
- bugfix: during queue shutdown, an assert invalidly triggered when
  the primary queue's DA worker was terminated while the DA queue's
  regular worker was still executing. This could result in a segfault
  during shutdown.
  tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=41
- bugfix: queue properties sizeOnDisk, bytesRead were persisted to 
  disk with wrong data type (long instead of int64) - could cause
  problems on 32 bit machines
- bugfix: queue aborted when it was shut down, DA-enabled, DA mode
  was just initiated but not fully initialized (a race condition)
- bugfix: imfile could abort under extreme stress conditions
  (when it was terminated before it could open all of its
  to be monitored files)